ubiquity (2.12.9) UNRELEASED; urgency=low

  [ Oliver Grawert ]
  * drop recommends of redboot-tools so the package can go to universe
  (LP: #1064271)

  [ Colin Watson ]
  * Try to install a signed kernel if base-installer asks for one.

 -- Oliver Grawert <ogra@ubuntu.com>  Tue, 09 Oct 2012 11:58:03 +0200

ubiquity (2.12.8) quantal; urgency=low

  [ Colin Watson ]
  * Before starting to do anything with apt, generate the locale in the
    target system, copy it out, and start using it (LP: #644736).
  * Update translations from Launchpad.

  [ Stéphane Graber ]
  * Replace use of assert in install_misc by a check, revert and exception
    so that errors can be ignored by the caller, useful for langpacks.
    (LP: #898787)

  [ Jonathan Riddell ]
  * KDE PartAuto.py Translate strings which previously were not translated.
    Thanks to Pantelis Koukousoulas

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 03 Oct 2012 09:11:16 +0100

ubiquity (2.12.7) quantal; urgency=low

  [ Dmitrijs Ledkovs ]
  * Change calculate_reuse_option logic to allow upgrading development
    releases to final/newer. (LP: #1050562)
  * Automatic update of included source packages: partman-auto
    103ubuntu2 (LP: #1050562), partman-crypto 54ubuntu2. (LP: #1056707)

  [ Colin Watson ]
  * Use xz compression for binary packages.

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Fri, 28 Sep 2012 14:21:13 +0100

ubiquity (2.12.6) quantal; urgency=low

  * Make the accessibility indicator menu items translatable (LP: #1040438).
    Note that this just adds the necessary infrastructure; we still need
    actual translations for this to be useful.
  * Drop dependency on realpath, not needed since hw-detect 1.89 (ubiquity
    2.11.14).
  * Bind-mount /run while installing packages in the target chroot, so that
    name resolution works (LP: #1055326).
  * Update translations from Launchpad (LP: #1056029).
  * Upgrade to Automake 1.11.6.