@@ -6,6 +6,8 @@ ubiquity (2.12.9) UNRELEASED; urgency=low
 
   [ Colin Watson ]
   * Try to install a signed kernel if base-installer asks for one.
+  * If the SecureBoot EFI variable is set, then ensure that
+    grub-efi-amd64-signed and shim-signed remain installed.
 
  -- Oliver Grawert <ogra@ubuntu.com>  Tue, 09 Oct 2012 11:58:03 +0200
 
